force-app/main/default/objects/OrderDeliveryMethod/fields/Ship_Via__c.field-meta.xml
<CustomField>
    <fullName>Ship_Via__c</fullName>
    <externalId>true</externalId>
    <label>Ship Via</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>