force-app/main/default/objects/OrderDeliveryMethod/fields/Tracking_Number_Place_Holder_String__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number_Place_Holder_String__c</fullName>
    <label>Tracking Number Place Holder String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>