force-app/main/default/objects/OrderDeliveryMethod/fields/Tracking_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Website_URL__c</fullName>
    <label>Tracking Website URL</label>
    <type>Url</type>
</CustomField>