force-app/main/default/objects/OrderDeliveryMethod/fields/WebDesc__c.field-meta.xml
<CustomField>
    <fullName>WebDesc__c</fullName>
    <label>WebDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>